--- a/client/src/Pages/HomePage/style.css
+++ b/client/src/Pages/HomePage/style.css
@@ -1,10 +1,10 @@
 .container-home-page {
   display: flex;
   justify-content:space-around;
-  margin: 20px;
+  margin: 5px;
   /* border: 3px solid black; */
 }
 .home-page-register {
   display: flex;
-  /* border: 3px solid black; */
+  width: 200px;
 }
